--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   get: ^4.6.5
   firebase_analytics: ^9.1.9
   carousel_slider: ^4.1.1
+  file_picker: ^4.6.1
 
 dev_dependencies:
   flutter_test:
